@@ -14,7 +14,6 @@ import org.semanticweb.owl.explanation.impl.blackbox.checker.InconsistentOntolog
 import org.semanticweb.owlapi.apibinding.OWLManager;
 import org.semanticweb.owlapi.model.*;
 import org.semanticweb.owlapi.reasoner.*;
-import org.semanticweb.owlapi.search.EntitySearcher;
 import org.semanticweb.owlapi.util.DefaultPrefixManager;
 
 import java.io.*;
@@ -30,7 +29,7 @@ public class ReasonerService implements AutoCloseable {
     private static volatile ReasonerService instance;
     private static final Object lock = new Object();
 
-    private final OWLOntologyManager manager;       // <-- 新增
+    private final OWLOntologyManager manager;
     private final OWLOntology ontology;
     private final OWLReasoner reasoner;
     private static boolean debug = false;
@@ -54,13 +53,18 @@ public class ReasonerService implements AutoCloseable {
             loadedOntology = manager.loadOntologyFromOntologyDocument(
                     new java.io.ByteArrayInputStream(mergedBytes));
         }
+        if (loadedOntology != null) {
+            System.out.println("主本体加载成功: " + loadedOntology.getOntologyID().getOntologyIRI().orElse(null));
+        } else {
+            System.err.println("警告：主本体加载失败！");
+        }
 
         // 2. 合并所有本体（入口 + 所有导入）
         IRI mergedIri = IRI.create("http://example.org/pizza/merged_total");
         OWLOntology totalOnt = manager.createOntology(mergedIri);
-        for (OWLOntology ont : manager.getOntologies()) {
-            totalOnt.addAxioms(ont.getAxioms());
-        }
+        manager.ontologies()
+                .filter(ont -> !ont.equals(totalOnt))
+                .forEach(ont -> ont.axioms().forEach(totalOnt::addAxiom));
         this.ontology = totalOnt;
 
         // ================= 提取前缀映射 =================
@@ -83,26 +87,23 @@ public class ReasonerService implements AutoCloseable {
             System.err.println("本体不一致！开始生成冲突解释...");
 
             try {
-                // 构造解释生成器工厂（使用正确的签名）
                 Supplier<OWLOntologyManager> managerSupplier = () -> manager;
-                long timeout = 5000; // 超时 5 秒，可根据本体大小调整
+                long timeout = 5000;
                 ExplanationGeneratorFactory<OWLAxiom> genFac =
                         new InconsistentOntologyExplanationGeneratorFactory(
-                                factory,                     // OWLReasonerFactory
-                                manager.getOWLDataFactory(), // OWLDataFactory
-                                managerSupplier,             // Supplier<OWLOntologyManager>
-                                timeout                      // long timeout in ms
+                                factory,
+                                manager.getOWLDataFactory(),
+                                managerSupplier,
+                                timeout
                         );
                 ExplanationGenerator<OWLAxiom> gen = genFac.createExplanationGenerator(totalOnt);
 
-                // 不一致性表示为 SubClassOf(owl:Thing owl:Nothing)
                 OWLDataFactory df = manager.getOWLDataFactory();
                 OWLAxiom inconsistencyAxiom = df.getOWLSubClassOfAxiom(
                         df.getOWLThing(),
                         df.getOWLNothing()
                 );
 
-                // 获取最多 5 个解释（如果解释很多，限制输出数量）
                 Set<Explanation<OWLAxiom>> explanations = gen.getExplanations(inconsistencyAxiom, 5);
                 int idx = 0;
                 for (Explanation<OWLAxiom> exp : explanations) {
@@ -118,13 +119,11 @@ public class ReasonerService implements AutoCloseable {
 
             } catch (Exception e) {
                 System.err.println("生成解释时发生异常：" + e.getMessage());
-                e.printStackTrace();
+                e.printStackTrace(System.err);
             }
 
-            // 抛出异常，终止推理
             throw new InconsistentOntologyException("本体不一致，已输出冲突解释（见上方），推理终止。");
         }
-        // ================= 一致性检查结束 =================
 
         // 4. 预计算推理
         tmpReasoner.precomputeInferences(
@@ -138,7 +137,7 @@ public class ReasonerService implements AutoCloseable {
         this.reasoner = tmpReasoner;
 
         System.out.println("合并本体公理总数：" + totalOnt.getAxiomCount());
-        System.out.println("manager已加载本体个数：" + manager.getOntologies().size());
+        System.out.println("manager已加载本体个数：" + manager.ontologies().count());
     }
 
     public OWLOntology getOntology() {
@@ -163,7 +162,6 @@ public class ReasonerService implements AutoCloseable {
         return model;
     }
 
-    // 修改：增加 OWLOntologyManager 参数
     public OWLOntology loadOntologyWithoutRecursive(String mainFile, OWLOntologyManager manager)
             throws OWLOntologyCreationException, FileNotFoundException {
         File file = new File(mainFile);
@@ -173,9 +171,10 @@ public class ReasonerService implements AutoCloseable {
         IRI documentIRI = IRI.create(file);
         OWLOntology ontology = manager.loadOntologyFromOntologyDocument(documentIRI);
 
-        System.out.println("已加载本体数: " + manager.getOntologies().size());
-        for (OWLOntology ont : manager.getOntologies()) {
-            System.out.println("  " + ont.getOntologyID().getOntologyIRI().get().toString());
+        List<OWLOntology> ontologyList = manager.ontologies().toList();
+        System.out.println("已加载本体数: " + ontologyList.size());
+        for (OWLOntology ont : ontologyList) {
+            System.out.println("  " + ont.getOntologyID().getOntologyIRI().map(IRI::toString).orElse("无 IRI"));
         }
         return ontology;
     }
@@ -219,29 +218,36 @@ public class ReasonerService implements AutoCloseable {
                 return iri;
             }
         }
-        // 如果无法解析，尝试直接作为 IRI（可能失败）
         return IRI.create(str);
     }
+
     // ============================================
     // ================= 类相关查询 =================
     // ============================================
     public Set<OWLNamedIndividual> getIndividuals(String classIRI) {
         OWLClass cls = getClass(classIRI);
         Set<OWLNamedIndividual> result = new HashSet<>();
+        IRI targetIRI = cls.getIRI();
 
-        // 1. 从所有本体中获取显式类型为 cls 的个体
-        for (OWLOntology ont : manager.getOntologies()) {
-            for (OWLClassAssertionAxiom axiom : ont.getClassAssertionAxioms(cls)) {
-                OWLIndividual ind = axiom.getIndividual();
-                if (ind instanceof OWLNamedIndividual) {
-                    result.add((OWLNamedIndividual) ind);
-                }
-            }
-        }
+        // 从合并后的本体获取所有类断言公理
+        ontology.axioms(AxiomType.CLASS_ASSERTION)
+                .forEach(ax -> {
+                    OWLClassExpression expr = ax.getClassExpression();
+                    if (expr.isOWLClass()) {
+                        OWLClass asserted = expr.asOWLClass();
+                        // 通过 resolveIRI 将短名转换为完整 IRI
+                        IRI resolvedIRI = resolveIRI(asserted.getIRI().getIRIString());
+                        if (resolvedIRI.equals(targetIRI)) {
+                            OWLIndividual ind = ax.getIndividual();
+                            if (ind instanceof OWLNamedIndividual) {
+                                result.add((OWLNamedIndividual) ind);
+                            }
+                        }
+                    }
+                });
 
-        // 2. 如果推理机能够返回实例，则合并（但已知它返回空，所以此步可选）
-        // 为了完整性，仍然尝试获取推理机推断的实例（包括间接）
-        Set<OWLNamedIndividual> inferred = reasoner.getInstances(cls, false)
+        // 添加推理机推断的实例（包含推断）
+        Set<OWLNamedIndividual> inferred = reasoner.getInstances(cls, true)
                 .entities()
                 .collect(Collectors.toSet());
         result.addAll(inferred);
@@ -273,29 +279,20 @@ public class ReasonerService implements AutoCloseable {
 
         Set<OWLClass> allSuperClasses = new HashSet<>();
         allSuperClasses.add(cls);
-        NodeSet<OWLClass> superNodes = reasoner.getSuperClasses(cls, true);
-        Set<OWLClass> superClassesSet = superNodes.entities().collect(Collectors.toSet());
-        allSuperClasses.addAll(superClassesSet);
+        reasoner.getSuperClasses(cls, true).entities().forEach(allSuperClasses::add);
 
         ontology.objectPropertiesInSignature().forEach(prop -> {
-            Set<OWLClassExpression> domains = new HashSet<>();
-            ontology.getObjectPropertyDomainAxioms(prop.asOWLObjectProperty())
-                    .forEach(axiom -> domains.add(axiom.getDomain()));
+            Set<OWLClassExpression> domains = ontology.objectPropertyDomainAxioms(prop.asOWLObjectProperty())
+                    .map(OWLObjectPropertyDomainAxiom::getDomain)
+                    .collect(Collectors.toSet());
 
             if (domains.isEmpty()) {
                 return;
             }
 
-            boolean matched = false;
-            for (OWLClassExpression domain : domains) {
-                for (OWLClass superCls : allSuperClasses) {
-                    if (reasoner.isEntailed(df.getOWLSubClassOfAxiom(superCls, domain))) {
-                        matched = true;
-                        break;
-                    }
-                }
-                if (matched) break;
-            }
+            boolean matched = domains.stream().anyMatch(domain ->
+                    allSuperClasses.stream().anyMatch(superCls ->
+                            reasoner.isEntailed(df.getOWLSubClassOfAxiom(superCls, domain))));
             if (matched) {
                 result.add(prop);
             }
@@ -307,8 +304,7 @@ public class ReasonerService implements AutoCloseable {
     public OWLObjectPropertyExpression getObjectPropertyOfClass(OWLClass cls, String propIRI) {
         Set<OWLObjectPropertyExpression> allProps = getAllObjectPropertiesOfClass(cls);
         for (OWLObjectPropertyExpression prop : allProps) {
-            String currentIRI = prop.getNamedProperty().getIRI().toString();
-            if (currentIRI.equals(propIRI)) {
+            if (prop.getNamedProperty().getIRI().toString().equals(propIRI)) {
                 return prop;
             }
         }
@@ -316,23 +312,21 @@ public class ReasonerService implements AutoCloseable {
     }
 
     public Set<OWLClassExpression> getObjectPropertyDomain(OWLObjectPropertyExpression prop) {
-        Set<OWLClassExpression> domains = new HashSet<>();
         if (prop == null) {
-            return domains;
+            return new HashSet<>();
         }
-        ontology.getObjectPropertyDomainAxioms(prop)
-                .forEach(axiom -> domains.add(axiom.getDomain()));
-        return domains;
+        return ontology.objectPropertyDomainAxioms(prop)
+                .map(OWLObjectPropertyDomainAxiom::getDomain)
+                .collect(Collectors.toSet());
     }
 
     public Set<OWLClassExpression> getObjectPropertyRange(OWLObjectPropertyExpression prop) {
-        Set<OWLClassExpression> ranges = new HashSet<>();
         if (prop == null) {
-            return ranges;
+            return new HashSet<>();
         }
-        ontology.getObjectPropertyRangeAxioms(prop)
-                .forEach(axiom -> ranges.add(axiom.getRange()));
-        return ranges;
+        return ontology.objectPropertyRangeAxioms(prop)
+                .map(OWLObjectPropertyRangeAxiom::getRange)
+                .collect(Collectors.toSet());
     }
 
     public Set<OWLClass> getObjectPropertyDomains(String propIRI) {
@@ -350,47 +344,30 @@ public class ReasonerService implements AutoCloseable {
     }
 
     public Set<OWLClassExpression> getObjectPropertyLimitations(OWLClass cls, OWLObjectPropertyExpression prop) {
-        Set<OWLClassExpression> limitations = new HashSet<>();
         if (cls == null || prop == null) {
-            return limitations;
+            return new HashSet<>();
         }
 
-        NodeSet<OWLClass> superNodes = reasoner.getSuperClasses(cls, true);
-        Set<OWLClass> allSuperClasses = superNodes.entities().collect(Collectors.toSet());
+        Set<OWLClass> allSuperClasses = new HashSet<>();
         allSuperClasses.add(cls);
+        reasoner.getSuperClasses(cls, true).entities().forEach(allSuperClasses::add);
 
-        Set<OWLOntology> ontologiesToSearch = new HashSet<>();
-        ontologiesToSearch.add(ontology);
-        ontologiesToSearch.addAll(ontology.getImportsClosure());
-
-        for (OWLOntology ont : ontologiesToSearch) {
-            for (OWLClass superCls : allSuperClasses) {
-                Set<OWLSubClassOfAxiom> axioms = ont.getSubClassAxiomsForSubClass(superCls);
-                for (OWLSubClassOfAxiom axiom : axioms) {
-                    OWLClassExpression superClassExpr = axiom.getSuperClass();
-                    if (superClassExpr instanceof OWLObjectRestriction) {
-                        OWLObjectRestriction restriction = (OWLObjectRestriction) superClassExpr;
-                        if (restriction.getProperty().equals(prop)) {
-                            limitations.add(restriction);
-                        }
-                    }
-                }
-            }
-        }
-
-        return limitations;
+        return Stream.concat(Stream.of(ontology), ontology.importsClosure())
+                .flatMap(ont -> allSuperClasses.stream()
+                        .flatMap(superCls -> ont.subClassAxiomsForSubClass(superCls)))
+                .map(OWLSubClassOfAxiom::getSuperClass)
+                .filter(OWLObjectRestriction.class::isInstance)        // 替换 lambda
+                .map(OWLObjectRestriction.class::cast)                 // 替换 lambda
+                .filter(restriction -> restriction.getProperty().equals(prop))
+                .collect(Collectors.toSet());
     }
 
     public Optional<OWLObjectPropertyExpression> getInverseProperty(String propIRI) {
         OWLObjectProperty prop = getObjectProperty(propIRI);
-        // 查找 owl:inverseOf 公理
-        for (OWLOntology ont : manager.getOntologies()) {
-            for (OWLInverseObjectPropertiesAxiom axiom : ont.getInverseObjectPropertyAxioms(prop)) {
-                // 返回逆属性
-                return Optional.of(axiom.getFirstProperty());
-            }
-        }
-        return Optional.empty();
+        return manager.ontologies()
+                .flatMap(ont -> ont.inverseObjectPropertyAxioms(prop))
+                .findFirst()
+                .map(OWLInverseObjectPropertiesAxiom::getFirstProperty);
     }
 
     public Map<OWLAnnotationProperty, Set<OWLLiteral>> getAnnotations(OWLObject entity) {
@@ -399,7 +376,7 @@ public class ReasonerService implements AutoCloseable {
             return result;
         }
 
-        IRI iri = null;
+        IRI iri;
         if (entity instanceof OWLClass) {
             iri = ((OWLClass) entity).getIRI();
         } else if (entity instanceof OWLNamedIndividual) {
@@ -408,20 +385,16 @@ public class ReasonerService implements AutoCloseable {
             return result;
         }
 
-        Set<OWLOntology> ontologies = new HashSet<>();
-        ontologies.add(ontology);
-        ontologies.addAll(ontology.getImportsClosure());
-
-        for (OWLOntology ont : ontologies) {
-            ont.getAnnotationAssertionAxioms(iri).forEach(ax -> {
-                OWLAnnotationProperty prop = ax.getProperty();
-                OWLAnnotationValue value = ax.getValue();
-                if (value instanceof OWLLiteral) {
-                    result.computeIfAbsent(prop, k -> new HashSet<>()).add((OWLLiteral) value);
-                }
-            });
-        }
-
+        final IRI targetIRI = iri;
+        Stream.concat(Stream.of(ontology), ontology.importsClosure())
+                .flatMap(ont -> ont.annotationAssertionAxioms(targetIRI))
+                .forEach(ax -> {
+                    OWLAnnotationProperty prop = ax.getProperty();
+                    OWLAnnotationValue value = ax.getValue();
+                    if (value instanceof OWLLiteral) {
+                        result.computeIfAbsent(prop, ignored -> new HashSet<>()).add((OWLLiteral) value);
+                    }
+                });
         return result;
     }
 
@@ -438,15 +411,13 @@ public class ReasonerService implements AutoCloseable {
     // ============================================
     // =============== 个体相关查询 =================
     // ============================================
-    // 修改：遍历所有本体查找个体
     public OWLNamedIndividual getIndividual(String individualIRI) {
         IRI indIRI = IRI.create(individualIRI);
-        for (OWLOntology ont : manager.getOntologies()) {
-            if (ont.containsIndividualInSignature(indIRI)) {
-                return manager.getOWLDataFactory().getOWLNamedIndividual(indIRI);
-            }
+        boolean exists = manager.ontologies().anyMatch(ont -> ont.containsIndividualInSignature(indIRI));
+        if (!exists) {
+            throw new IllegalArgumentException("个体未找到: " + individualIRI);
         }
-        throw new IllegalArgumentException("个体未找到: " + individualIRI);
+        return manager.getOWLDataFactory().getOWLNamedIndividual(indIRI);
     }
 
     public Set<OWLClass> getIndividualDirectTypes(OWLNamedIndividual ind) {
@@ -458,7 +429,7 @@ public class ReasonerService implements AutoCloseable {
     public Set<OWLClass> getIndividualAllTypes(OWLNamedIndividual ind) {
         Set<OWLClass> result = new HashSet<>();
         Set<OWLClass> directTypes = getIndividualDirectTypes(ind);
-        System.out.println("直接类型: " + directTypes.stream().map(c -> c.getIRI().getShortForm()).collect(Collectors.toList()));
+        System.out.println("直接类型: " + directTypes.stream().map(c -> c.getIRI().getShortForm()).toList());
 
         for (OWLClass cls : directTypes) {
             IRI iri = resolveIRI(cls.getIRI().getIRIString());
@@ -470,105 +441,59 @@ public class ReasonerService implements AutoCloseable {
                     .collect(Collectors.toSet());
             result.addAll(supers);
         }
-        /*测试代码
-        OWLDataFactory df = manager.getOWLDataFactory();
-        OWLClass testClass = df.getOWLClass(IRI.create("http://example.org/pizza/components/classes/NeapolitanCrust"));
-        System.out.println("直接父类: " + reasoner.getSuperClasses(testClass, false).entities()
-                .filter(c -> !c.isOWLThing())
-                .map(c -> c.getIRI().getShortForm())
-                .collect(Collectors.toList()));
-        System.out.println("所有父类: " + reasoner.getSuperClasses(testClass, true).entities()
-                .filter(c -> !c.isOWLThing())
-                .map(c -> c.getIRI().getShortForm())
-                .collect(Collectors.toList()));
-        */
         return result;
     }
 
     public OWLClass getClass(String classIRIOrQName) {
         IRI iri = resolveIRI(classIRIOrQName);
-        for (OWLOntology ont : manager.getOntologies()) {
-            if (ont.containsClassInSignature(iri)) {
-                return manager.getOWLDataFactory().getOWLClass(iri);
-            }
-        }
-        throw new IllegalArgumentException("类未找到: " + classIRIOrQName);
+        return manager.ontologies()
+                .filter(ont -> ont.containsClassInSignature(iri))
+                .findFirst()
+                .map(ignored -> manager.getOWLDataFactory().getOWLClass(iri))
+                .orElseThrow(() -> new IllegalArgumentException("类未找到: " + classIRIOrQName));
     }
 
     public Set<OWLObjectPropertyExpression> getObjectPropertiesOfIndividual(OWLNamedIndividual ind) {
         Set<OWLObjectPropertyExpression> properties = new HashSet<>();
-        if (ind == null) {
-            return properties;
-        }
+        if (ind == null) return properties;
 
-        // 1. 获取个体直接断言的对象属性
-        Set<OWLObjectPropertyAssertionAxiom> axioms = ontology.getObjectPropertyAssertionAxioms(ind);
-        for (OWLObjectPropertyAssertionAxiom axiom : axioms) {
-            properties.add(axiom.getProperty());
-        }
+        ontology.objectPropertyAssertionAxioms(ind)
+                .map(OWLObjectPropertyAssertionAxiom::getProperty)
+                .forEach(properties::add);
 
-        // 2. 获取个体所有类型（包括直接和间接父类）
-        Set<OWLClass> allTypes = getIndividualAllTypes(ind);  // 需要确保该方法返回所有类型
-        for (OWLClass cls : allTypes) {
-            // 获取该类上定义的所有对象属性（包括继承的）
-            Set<OWLObjectPropertyExpression> classProps = getAllObjectPropertiesOfClass(cls);
-            properties.addAll(classProps);
-        }
-
+        getIndividualAllTypes(ind).forEach(cls ->
+                properties.addAll(getAllObjectPropertiesOfClass(cls))
+        );
         return properties;
     }
 
     public Set<OWLNamedIndividual> getObjectPropertyDirectValueOfIndividual(
-            OWLNamedIndividual ind,
-            OWLObjectPropertyExpression prop) {
+            OWLNamedIndividual ind, OWLObjectPropertyExpression prop) {
+        if (ind == null || prop == null) return new HashSet<>();
 
-        Set<OWLNamedIndividual> result = new HashSet<>();
-        if (ind == null || prop == null) {
-            return result;
-        }
-
-        Set<OWLOntology> ontologiesToSearch = new HashSet<>();
-        ontologiesToSearch.add(ontology);
-        ontologiesToSearch.addAll(ontology.getImportsClosure());
-
-        for (OWLOntology ont : ontologiesToSearch) {
-            Set<OWLObjectPropertyAssertionAxiom> axioms = ont.getObjectPropertyAssertionAxioms(ind);
-            for (OWLObjectPropertyAssertionAxiom axiom : axioms) {
-                if (axiom.getProperty().equals(prop)) {
-                    OWLIndividual object = axiom.getObject();
-                    if (object instanceof OWLNamedIndividual) {
-                        result.add((OWLNamedIndividual) object);
-                    }
-                }
-            }
-        }
-
-        return result;
+        return Stream.concat(Stream.of(ontology), ontology.importsClosure())
+                .flatMap(ont -> ont.objectPropertyAssertionAxioms(ind))
+                .filter(axiom -> axiom.getProperty().equals(prop))
+                .map(OWLObjectPropertyAssertionAxiom::getObject)
+                .filter(OWLNamedIndividual.class::isInstance)
+                .map(OWLNamedIndividual.class::cast)
+                .collect(Collectors.toSet());
     }
 
     public Set<OWLNamedIndividual> getObjectPropertyAllValueOfIndividual(
-            OWLNamedIndividual ind,
-            OWLObjectPropertyExpression prop) {
-
+            OWLNamedIndividual ind, OWLObjectPropertyExpression prop) {
         if (ind == null || prop == null || reasoner == null) {
             return new HashSet<>();
         }
-
         NodeSet<OWLNamedIndividual> values = reasoner.getObjectPropertyValues(ind, prop);
         return values.entities().collect(Collectors.toSet());
     }
 
     public Set<OWLDataProperty> getDirectDataPropertiesOfIndividual(OWLNamedIndividual ind) {
-        Set<OWLDataProperty> properties = new HashSet<>();
-        if (ind == null) {
-            return properties;
-        }
-
-        Set<OWLDataPropertyAssertionAxiom> axioms = ontology.getDataPropertyAssertionAxioms(ind);
-        for (OWLDataPropertyAssertionAxiom axiom : axioms) {
-            properties.add(axiom.getProperty().asOWLDataProperty());
-        }
-        return properties;
+        if (ind == null) return new HashSet<>();
+        return ontology.dataPropertyAssertionAxioms(ind)
+                .map(axiom -> axiom.getProperty().asOWLDataProperty())
+                .collect(Collectors.toSet());
     }
 
     public Set<OWLDataProperty> getAllAllowedDataPropertiesOfIndividual(OWLNamedIndividual ind) {
@@ -578,28 +503,49 @@ public class ReasonerService implements AutoCloseable {
         }
 
         Set<OWLClass> allClasses = this.getIndividualAllTypes(ind);
+        if (debug) System.out.println("个体类型数量: " + allClasses.size());
+
+        Set<OWLDataProperty> allDataProps = new HashSet<>();
+        for (OWLDataPropertyExpression expr : ontology.dataPropertiesInSignature().collect(Collectors.toList())) {
+            allDataProps.add(expr.asOWLDataProperty());
+        }
+        if (debug) System.out.println("总数据属性数量: " + allDataProps.size());
+
+        Map<OWLDataProperty, Set<OWLClass>> propDomains = new HashMap<>();
+        for (OWLDataProperty prop : allDataProps) {
+            Set<OWLClass> domains = getDataPropertyDomains(prop);
+            propDomains.put(prop, domains);
+            if (debug) System.out.println("属性 " + prop.getIRI().getShortForm() + " 的域大小: " + domains.size());
+        }
+
         OWLDataFactory df = ontology.getOWLOntologyManager().getOWLDataFactory();
 
         for (OWLClass cls : allClasses) {
-            Set<OWLDataProperty> allDataProps = ontology.dataPropertiesInSignature()
-                    .map(prop -> prop.asOWLDataProperty())
-                    .collect(Collectors.toSet());
+            if (debug) System.out.println("检查类: " + cls.getIRI().getShortForm());
+            for (Map.Entry<OWLDataProperty, Set<OWLClass>> entry : propDomains.entrySet()) {
+                OWLDataProperty prop = entry.getKey();
+                Set<OWLClass> domains = entry.getValue();
 
-            for (OWLDataProperty prop : allDataProps) {
-                Set<OWLClass> domains = getDataPropertyDomains(prop);
                 if (domains.isEmpty()) {
                     allowedProperties.add(prop);
-                    continue;
-                }
-                for (OWLClassExpression domain : domains) {
-                    if (reasoner.isEntailed(df.getOWLSubClassOfAxiom(cls, domain))) {
+                    if (debug) System.out.println("  -> 属性 " + prop.getIRI().getShortForm() + " 无域，允许");
+                } else {
+                    boolean isSubClass = false;
+                    for (OWLClass domain : domains) {
+                        if (reasoner.isEntailed(df.getOWLSubClassOfAxiom(cls, domain))) {
+                            isSubClass = true;
+                            break;
+                        }
+                    }
+                    if (isSubClass) {
                         allowedProperties.add(prop);
-                        break;
+                        if (debug) System.out.println("  -> 属性 " + prop.getIRI().getShortForm() + " 匹配域，允许");
                     }
                 }
             }
         }
 
+        if (debug) System.out.println("最终允许属性数量: " + allowedProperties.size());
         return allowedProperties;
     }
 
@@ -609,30 +555,23 @@ public class ReasonerService implements AutoCloseable {
             return result;
         }
 
-        // 1. 使用推理机获取所有值（包括从父类 hasValue 约束推导出的）
         if (reasoner != null) {
-            // 直接使用 Set 接收（根据编译器反馈，返回类型为 Set）
             Set<OWLLiteral> values = reasoner.getDataPropertyValues(ind, dataProp);
             result.addAll(values);
         }
 
-        // 2. 如果推理机未返回任何值，手动从父类的 hasValue 约束中查找
         if (result.isEmpty() && ontology != null && manager != null) {
             Set<OWLClass> allTypes = getIndividualAllTypes(ind);
-            OWLDataFactory df = ontology.getOWLOntologyManager().getOWLDataFactory();
-            for (OWLClass cls : allTypes) {
-                for (OWLOntology ont : manager.getOntologies()) {
-                    for (OWLSubClassOfAxiom axiom : ont.getSubClassAxiomsForSubClass(cls)) {
-                        OWLClassExpression superClass = axiom.getSuperClass();
-                        if (superClass instanceof OWLDataHasValue) {
-                            OWLDataHasValue restriction = (OWLDataHasValue) superClass;
-                            if (restriction.getProperty().equals(dataProp)) {
-                                result.add(restriction.getFiller());
-                            }
-                        }
-                    }
-                }
-            }
+            Set<OWLLiteral> hasValueLiterals = allTypes.stream()
+                    .flatMap(cls -> manager.ontologies()
+                            .flatMap(ont -> ont.subClassAxiomsForSubClass(cls)))
+                    .map(OWLSubClassOfAxiom::getSuperClass)
+                    .filter(expr -> expr instanceof OWLDataHasValue)
+                    .map(expr -> (OWLDataHasValue) expr)
+                    .filter(restriction -> restriction.getProperty().equals(dataProp))
+                    .map(OWLDataHasValue::getFiller)
+                    .collect(Collectors.toSet());
+            result.addAll(hasValueLiterals);
         }
 
         return result;
@@ -651,6 +590,7 @@ public class ReasonerService implements AutoCloseable {
     public Set<OWLClass> getDataPropertyDomains(OWLDataProperty prop) {
         return reasoner.getDataPropertyDomains(prop, true).entities()
                 .filter(c -> !c.isOWLThing())
+                .map(c -> manager.getOWLDataFactory().getOWLClass(resolveIRI(c.getIRI().getIRIString())))
                 .collect(Collectors.toSet());
     }
 
@@ -658,8 +598,8 @@ public class ReasonerService implements AutoCloseable {
         OWLDataProperty prop = getDataProperty(propIRI);
         return ontology.dataPropertyRangeAxioms(prop)
                 .map(OWLDataPropertyRangeAxiom::getRange)
-                .filter(range -> range.isOWLDatatype())
-                .map(range -> range.asOWLDatatype())
+                .filter(OWLDatatype.class::isInstance)
+                .map(OWLDataRange::asOWLDatatype)
                 .collect(Collectors.toSet());
     }
 
@@ -670,26 +610,22 @@ public class ReasonerService implements AutoCloseable {
     }
 
     // ================= 辅助方法 =================
-    // 修改：遍历所有本体查找对象属性
     public OWLObjectProperty getObjectProperty(String iri) {
         IRI propIRI = IRI.create(iri);
-        for (OWLOntology ont : manager.getOntologies()) {
-            if (ont.containsObjectPropertyInSignature(propIRI)) {
-                return manager.getOWLDataFactory().getOWLObjectProperty(propIRI);
-            }
-        }
-        throw new IllegalArgumentException("对象属性未找到: " + iri);
+        return manager.ontologies()
+                .filter(ont -> ont.containsObjectPropertyInSignature(propIRI))
+                .findFirst()
+                .map(ignored -> manager.getOWLDataFactory().getOWLObjectProperty(propIRI))
+                .orElseThrow(() -> new IllegalArgumentException("对象属性未找到: " + iri));
     }
 
-    // 修改：遍历所有本体查找数据属性
     public OWLDataProperty getDataProperty(String iri) {
         IRI propIRI = IRI.create(iri);
-        for (OWLOntology ont : manager.getOntologies()) {
-            if (ont.containsDataPropertyInSignature(propIRI)) {
-                return manager.getOWLDataFactory().getOWLDataProperty(propIRI);
-            }
-        }
-        throw new IllegalArgumentException("数据属性未找到: " + iri);
+        return manager.ontologies()
+                .filter(ont -> ont.containsDataPropertyInSignature(propIRI))
+                .findFirst()
+                .map(ignored -> manager.getOWLDataFactory().getOWLDataProperty(propIRI))
+                .orElseThrow(() -> new IllegalArgumentException("数据属性未找到: " + iri));
     }
 
     // ================= 数据类型查询 =================
@@ -699,20 +635,22 @@ public class ReasonerService implements AutoCloseable {
     }
 
     // ================= 实体类型判断 =================
-    // 修改：遍历所有本体判断类型
     public String getEntityType(IRI iri) {
-        for (OWLOntology ont : manager.getOntologies()) {
-            if (ont.containsClassInSignature(iri)) return "Class";
-            if (ont.containsIndividualInSignature(iri)) return "Individual";
-            if (ont.containsObjectPropertyInSignature(iri)) return "ObjectProperty";
-            if (ont.containsDataPropertyInSignature(iri)) return "DataProperty";
-            if (ont.containsAnnotationPropertyInSignature(iri)) return "AnnotationProperty";
-                if (ont.containsDatatypeInSignature(iri)) return "Datatype";
-        }
-        return "Unknown";
+        return manager.ontologies()
+                .flatMap(ont -> Stream.of(
+                        ont.containsClassInSignature(iri) ? Optional.of("Class") : Optional.<String>empty(),
+                        ont.containsIndividualInSignature(iri) ? Optional.of("Individual") : Optional.<String>empty(),
+                        ont.containsObjectPropertyInSignature(iri) ? Optional.of("ObjectProperty") : Optional.<String>empty(),
+                        ont.containsDataPropertyInSignature(iri) ? Optional.of("DataProperty") : Optional.<String>empty(),
+                        ont.containsAnnotationPropertyInSignature(iri) ? Optional.of("AnnotationProperty") : Optional.<String>empty(),
+                        ont.containsDatatypeInSignature(iri) ? Optional.of("Datatype") : Optional.<String>empty()
+                ))
+                .flatMap(Optional::stream)
+                .findFirst()
+                .orElse("Unknown");
     }
 
-    // 辅助解析 JSON 数组
+    // 辅助解析 JSON 数组（保留，未涉及废弃API）
     private List<String> parseJsonArray(String json) {
         String trimmed = json.trim();
         if (trimmed.startsWith("[") && trimmed.endsWith("]")) {
@@ -733,40 +671,24 @@ public class ReasonerService implements AutoCloseable {
     public String getLabel(OWLOntology ontology, IRI iri, String lang) {
         OWLDataFactory df = ontology.getOWLOntologyManager().getOWLDataFactory();
         OWLAnnotationProperty rdfsLabel = df.getRDFSLabel();
-        List<OWLLiteral> labels = new ArrayList<>();
-        ontology.getEntitiesInSignature(iri).forEach(entity -> {
-            try (Stream<OWLAnnotationAssertionAxiom> stream = EntitySearcher.getAnnotationAssertionAxioms(entity, ontology)) {
-                stream.filter(ax -> ax.getProperty().equals(rdfsLabel))
-                        .map(OWLAnnotationAssertionAxiom::getValue)
-                        .filter(val -> val instanceof OWLLiteral)
-                        .map(val -> (OWLLiteral) val)
-                        .forEach(labels::add);
-            }
-        });
-        if (labels.isEmpty()) {
-            ontology.annotationAssertionAxioms(iri)
-                    .filter(ax -> ax.getProperty().equals(rdfsLabel))
-                    .map(OWLAnnotationAssertionAxiom::getValue)
-                    .filter(val -> val instanceof OWLLiteral)
-                    .map(val -> (OWLLiteral) val)
-                    .forEach(labels::add);
-        }
-        if (labels.isEmpty()) {
-            System.out.println("【调试】未找到 IRI: " + iri + " 的标签。");
-            return null;
-        }
-        if (lang != null && !lang.trim().isEmpty()) {
-            Optional<String> langLabel = labels.stream()
-                    .filter(lit -> lit.hasLang(lang))
-                    .map(OWLLiteral::getLiteral)
-                    .findFirst();
-            if (langLabel.isPresent()) return langLabel.get();
-        }
-        Optional<String> noLangLabel = labels.stream()
-                .filter(lit -> !lit.hasLang())
-                .map(OWLLiteral::getLiteral)
-                .findFirst();
-        if (noLangLabel.isPresent()) return noLangLabel.get();
-        return labels.stream().map(OWLLiteral::getLiteral).findFirst().orElse(null);
+
+        // 获取所有 rdfs:label 字面量流
+        Stream<OWLLiteral> labels = ontology.annotationAssertionAxioms(iri)
+                .filter(ax -> ax.getProperty().equals(rdfsLabel))
+                .map(OWLAnnotationAssertionAxiom::getValue)
+                .filter(OWLLiteral.class::isInstance)
+                .map(OWLLiteral.class::cast);
+
+        // 优先返回指定语言的标签，其次无语言标签，最后任意标签
+        return Stream.<Supplier<Optional<String>>>of(
+                        () -> labels.filter(lit -> lit.hasLang(lang)).findFirst().map(OWLLiteral::getLiteral),
+                        () -> labels.filter(lit -> !lit.hasLang()).findFirst().map(OWLLiteral::getLiteral),
+                        () -> labels.findFirst().map(OWLLiteral::getLiteral)
+                )
+                .map(Supplier::get)
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .findFirst()
+                .orElse(null);
     }
 }
